testsuite/tests/typecheck/should_fail/T15883.stderr

T15883.hs:9:19: error:
    • A newtype must have an argument of kind *
      Perhaps you intended to use UnliftedNewtypes
    • In the definition of data constructor ‘MkFoo’
      In the newtype declaration for ‘Foo’
